--- a/agenda.html
+++ b/agenda.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Agendamento</title>
+		<link rel="stylesheet" href="style.CSS">
 	</head>
 	<body>
 	<p><h1>Agende seu horário abaixo</h1></p>
