--- a/quemsomos.html
+++ b/quemsomos.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Pet Shop</title>
+		<link rel="stylesheet" href="style.CSS">
 	</head>
 	<body>
 		<h1>Meu Cão Amigo - Pet Shop</h1>
