--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Pet Shop</title>
+		<link rel="stylesheet" href="style.CSS">
 	</head>
 	<body>
-		<h1>Meu Cão Amigo - Pet Shop</h1>
-		<h2>Home</h2>
-			<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href="quemsomos.html">Quem somos</a></li>
-				<li><a href="produtos.html">Produtos</a></li>
-			</ul>
+		<h1 class="center sombra cor">Meu Cão Amigo - Pet Shop</h1>
+			<nav class="center cor">
+				<a href="index.html">Home</a>
+				<a href="quemsomos.html">Quem somos</a>
+				<a href="produtos.html">Produtos</a>
+			</nav>
 		<form action="obrigado.html" id="contato" method="get">
 		<p>
 			<label for="name">Nome:</label>
@@ -33,19 +33,5 @@
 			<input type="submit"
 				   value="Enviar">
 		</p>
-		</form>
-		</p>
-		<center><table border="1">
-		<thead>
-		  <tr>
-			<th><h1>Banho e Tosa</h1></th>
-		  </tr>
-		</thead>
-		<tbody>
-		  <tr>
-			<td><img src="img/banho.png"></td>
-		  </tr>
-		</tbody>
-		</table></center>
 	</body>
 </html>
