--- a/obrigado.html
+++ b/obrigado.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Pet Shop - Obrigado</title>
+		<link rel="stylesheet" href="style.CSS">
 	</head>
 	<body>
 		<center><h1>Meu cão amigo - Pet Shop</h1>
