--- a/quemsomos.html
+++ b/quemsomos.html
@@ -6,13 +6,13 @@
 		<link rel="stylesheet" href="style.CSS">
 	</head>
 	<body>
-		<h1>Meu Cão Amigo - Pet Shop</h1>
+		<h1 class="center">Meu Cão Amigo - Pet Shop</h1>
 		<h2>Home</h2>
-			<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href="quemsomos.html">Quem somos</a></li>
-				<li><a href="produtos.html">Produtos</a></li>
-			</ul><hr>
+			<nav class="center cor">
+			<a href="index.html">Home</a>
+			<a href="quemsomos.html">Quem somos</a>
+			<a href="produtos.html">Produtos</a>
+			</nav>
 		<h1>Siga-nos nas redes sociais!</h1>
 				<li><a href="https://www.instagram.com/" target="blank"><img src="img/instagram.webp" width="20" height="20"></li>
 				<li><a href="https://www.youtube.com/watch?v=Mi12nUC2QKo" target="blank"><img src="img/youtube.png" width="20" height="20"></li>
